# pvf-stack-test

./: Cargo.toml  Makefile  README.md
exp/: README.md
exp/01-empty-func/: Makefile  wat.tmpl
exp/02-load-args/: wat.tmpl
exp/03-load-args-and-call/: wat.tmpl
exp/04-locals/: wat.tmpl
exp/05-used-locals/: Makefile  wat.tmpl
exp/06-used-nondeterm-locals/: Makefile  wat.tmpl
exp/07-used-nondeterm-locals-stack/: Makefile  wat.tmpl
exp/08-const-loop/: Makefile  wat.tmpl
src/: main.rs
